[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art/Creep/Guardian/GuardianShieldLeft.png" type="Texture" id=1]
[ext_resource path="res://Entity/Creep/Guardian/Guardian.gd" type="Script" id=2]
[ext_resource path="res://Art/Creep/Guardian/GuardianShieldTop.png" type="Texture" id=3]
[ext_resource path="res://Entity/Creep/Guardian/GuardianSpriteFrames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Art/Creep/Guardian/GuardianShieldRight.png" type="Texture" id=5]
[ext_resource path="res://Entity/Utility/Hitbox/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sound/Weapon/LightRetroGun.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/Destruction/DryAnvilHit.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/Death/GuardianDeathScream.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 15.5

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.15894, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.84106, 1, 1, 1, 0 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Guardian" type="KinematicBody2D" groups=[
"creep",
"player_collider",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 4 )
animation = "right"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="FrontRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 129

[node name="PlayerDetectionRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 270, 0 )
collision_mask = 2

[node name="BackRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -17, 0 )
collision_mask = 129

[node name="Hitbox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="ShieldBack" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="ShieldBack"]
position = Vector2( -14, 0 )
emitting = false
amount = 5
lifetime = 0.4
texture = ExtResource( 1 )
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 12.0
color_ramp = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="ShieldBack"]
collision_layer = 64
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShieldBack/StaticBody2D"]
polygon = PoolVector2Array( -13, 16, -18, 12, -21, 5, -21, -5, -18, -12, -13, -16 )

[node name="ShieldFront" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="ShieldFront"]
position = Vector2( 14, 0 )
emitting = false
amount = 5
lifetime = 0.4
texture = ExtResource( 5 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 12.0
color_ramp = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="ShieldFront"]
collision_layer = 64
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShieldFront/StaticBody2D"]
polygon = PoolVector2Array( 13, 16, 19, 12, 21, 5, 21, -5, 18, -12, 13, -16 )

[node name="ShieldTop" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="ShieldTop"]
position = Vector2( 0, -15 )
emitting = false
amount = 5
lifetime = 0.4
texture = ExtResource( 3 )
direction = Vector2( 0, -1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 12.0
color_ramp = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 4 )

[node name="IgnorePlayerTimer" type="Timer" parent="."]
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
one_shot = true

[node name="GunAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Effects"

[node name="DeathAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -7.8
pitch_scale = 0.8
bus = "Effects"

[node name="DeathScreamAudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.4
bus = "Effects"
[connection signal="attacked" from="Hitbox" to="." method="_on_Hitbox_attacked"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="IgnorePlayerTimer" to="." method="_on_IgnorePlayerTimer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
